# datacollection-starter-kit-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_09_1252-9a96b4841ad7_initial_example_table_created.py  2026_04_10_1722-3a4d7a3dbd50_initial_migration.py  2026_04_10_1810-a3824df86db8_initial_migration.py
config/: constants.py  logger.py  migration_settings.py  settings.py
doc/: development-guide.md  getting-started.md  git-workflow.md  makefile-commands.md  temporal-workflows.md
docker/: Dockerfile  docker-compose.yml
scripts/: example_trigger.py
src/core/: exceptions.py
src/db/: connection.py
src/db/models/: __init__.py  test_models.py
src/temporal/: client.py  worker.py
src/temporal/activities/: example_activity.py
src/temporal/triggers/: example_trigger.py
src/temporal/workflows/: example_workflow.py
