[project]
name = "datacollection-starter-kit-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioodbc>=0.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "temporalio>=1.24.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT", "RET"]
# E/F = pyflakes/pycodestyle, I = isort, N = naming, W = Warning, PY = Pypgrade,
# C4 = Comperhensions, B = bugbear, PT = pytest style, RET = return statements

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "W291"]


ignore = []
